[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arim"
dynamic = ["version"]
description = 'A Python 3 library for modelling and imaging in ultrasonic testing'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Nicolas Budyn", email = "contact@budyn.dev" },
  { name = "Rhodri Bevan", email = "" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",

]
dependencies = [
  "numpy<2",
  "scipy",
  "numba",
  "pyyaml",
  "pooch",
]

[project.optional-dependencies]
plot = ["matplotlib"]
io = ["h5py"]

[project.urls]
Documentation = "https://github.com/ndtatbristol/arim#readme"
Issues = "https://github.com/ndtatbristol/arim/issues"
Source = "https://github.com/ndtatbristol/arim"

[tool.hatch.version]
path = "src/arim/__init__.py"

[tool.hatch.envs.default]
features = [
  "plot",
  "io",
]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest>=6.0",
  "numdifftools",
  "sphinx",
  "sphinx_rtd_theme",

]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black~=23.0",
  "mypy==1.10.0",
  "ruff~=0.8",
]
[tool.hatch.envs.lint.scripts]
# typing = "mypy --install-types --non-interactive {args:src/arim tests}"
check = [
  "ruff check {args:.}",
  "black --check --diff {args:.}",
]
check-gh = [
  "ruff check --output-format=github {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff check --fix {args:.}",
]
# all = [
#   "check",
#   "typing",
# ]

[tool.black]
target-version = ["py38"]
line-length = 88

[tool.ruff]
target-version = "py38"
line-length = 88
lint.select = [
  "E",
  "F",
  "NPY",
  "I", # isort
  "UP",
  "W",
]
lint.ignore = [
  "E731", # lambda are fine
  "E501", # line too long (in practice: only in comment or docstring)
  "NPY002", # legacy np.random API
  "NPY201", # Temporary: np.complex_ will be removed in numpy 2.0
  "UP032", # Use f-string instead of `format` call
  "UP031", # Use format specifiers instead of percent format
]
lint.unfixable = [
  # Don't touch unused imports, because we may be reexporting the API in __init__.py
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["arim"]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["arim", "tests"]
branch = true
parallel = true
omit = [
  "src/arim/__about__.py",
]

[tool.coverage.paths]
arim = ["src/arim", "*/arim/src/arim"]
tests = ["tests", "*/arim/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

